konst/tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.stderr
error: expected struct pattern
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:3:46
  |
3 | const _: () = { konst::destructure_rec!{ foo [] = 10..20 }; };
  |                                              ^^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct patterns do not allow fields after `..` patterns
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:5:69
  |
5 | const _: () = { konst::destructure_rec!{ std::ops::Range{start, .., end} = 10..20 }; };
  |                                                                     ^^^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected struct field name
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:7:64
  |
7 | const _: () = { konst::destructure_rec!{ std::ops::Range{start,, end} = 10..20 }; };
  |                                                                ^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct patterns do not allow fields after `..` patterns
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:9:55
  |
9 | const _: () = { konst::destructure_rec!{ Tuple(a, .., b) = Tuple(1, 2, 3) }; };
  |                                                       ^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `,`
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:11:51
   |
11 | const _: () = { konst::destructure_rec!{ Tuple(a ,, b) = Tuple(1, 2, 3) }; };
   |                                                   ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier, found reserved identifier `_`
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:13:42
   |
13 | const _: () = { konst::destructure_rec!{ _ {start, end} = 10..20 }; };
   |                                          ^ expected identifier, found reserved identifier

error[E0422]: cannot find struct, variant or union type `_` in this scope
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_struct_pat_syntax-err.rs:13:42
   |
13 | const _: () = { konst::destructure_rec!{ _ {start, end} = 10..20 }; };
   |                                          ^ not found in this scope
